<resources>
    <string name="app_name">MenuAdv</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_item1">item1</string>
    <string name="action_item2">item2</string>
    <string name="action_item3">item3</string>
    <string name="Mail">Mail</string>
    <string name="invisible_group">Отобразить группу меню</string>
    <string name="invisible_item">Отобразить пункт меню</string>

</resources>
