<?xml version="1.0"?>

    <menu tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"/>

    <item
        android:title="@string/Mail"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:id="@+id/action_mail"
        android:icon="@android:drawable/ic_dialog_email"/>

    <item
        android:title="@string/action_item1"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:id="@+id/action_item1"/>

    <group android:id="@+id/group1">

    <item
        android:title="@string/action_item2"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:id="@+id/action_item2"/>

    <item
        android:title="@string/action_item3"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:id="@+id/action_item3"/>

</group>

</menu>