<?xml version="1.0"?>

    <RelativeLayout tools:context=".MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:text="@string/hello_world"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBox"
        android:text="@string/invisible_group"
        android:checked="true"
        android:layout_marginTop="26dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/checkBox2"
        android:text="@string/invisible_item"
        android:checked="true"
        android:layout_marginTop="23dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox"/>

</RelativeLayout>